--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		var socket = io();
 		socket.on('fileChanged', () => window.location.reload(true));
 	</script>
+	<script src="js/phaser/dist/phaser.js"></script>
 	<script type="module" src="/js/main.js"></script>
 </body>
 </html>
