--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>boil</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
 </head>
 <body>
-	<script src="/socket.io/socket.io.js"></script>
+	<!-- <script src="/socket.io/socket.io.js"></script>
 	<script>
 		var socket = io();
 		socket.on('fileChanged', () => window.location.reload(true));
-	</script>
-	<script src="js/phaser/dist/phaser.js"></script>
-	<script type="module" src="/js/main.js"></script>
+	</script> -->
+	<script type="module" src="./js/main.js"></script>
 </body>
 </html>
