--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>boil</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="./public/css/main.css" />
 </head>
 <body>
 	<!-- <script src="/socket.io/socket.io.js"></script>
@@ -13,6 +13,6 @@
 		var socket = io();
 		socket.on('fileChanged', () => window.location.reload(true));
 	</script> -->
-	<script type="module" src="./js/main.js"></script>
+	<script type="module" src="./public/js/dist/main.bundle.js"></script>
 </body>
 </html>
