autoreload works finally

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		var socket = io();
 		socket.on('fileChanged', () => window.location.reload(true));
 	</script> -->
-	<script type="module" src="./public/js/dist/main.bundle.js"></script>
+	<script type="module" src="./public/js/main.bundle.js"></script>
 </body>
 </html>
